--- a/assets/scss/_modules.scss
+++ b/assets/scss/_modules.scss
@@ -147,7 +147,6 @@
             border-radius: 0.3rem;
         }
         @media (max-width: 840px) {
-            width: 93% !important;
             float: left;
         }
     }
@@ -158,6 +157,7 @@
         font-size: 1em;
         position: relative;
         left: -0.3rem;
+        -webkit-appearance: none;
 
         border-top-left-radius: 0;
         border-bottom-left-radius: 0;
@@ -290,7 +290,7 @@
             width: 100%;
 
             &.margin-top {
-                margin: 3rem 0 0 0;
+                margin: 0 0 0 0;
             }
             &.margin-bottom {
                 margin: 0 0 3rem 0;
